# aoc2025

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/agents/: Scaffolder.agent.md
input/: .gitignore
res/: day10notes.xlsx
src/: main.cpp  scaffold.cpp
src/scaffold/: AocCachedWebClient.cpp  AocCachedWebClient.h  AocConfig.cpp  AocConfig.h
src/scaffold/template/: Day__DAY_PADDED__.h  Day__DAY_PADDED__Test.cpp
src/solutions/: Day01.cpp  Day01.h  Day02.h  Day03.h  Day04.h  Day05.h  Day06.h  Day07.h  Day08.h  Day09.h  Day10.h  Day11.h  Day12.h  SolutionIndex.cpp  SolutionIndex.h  index.cpp  index.h
src/templates/: Day__DAY_PADDED__.h  Day__DAY_PADDED__Test.cpp
src/util/: AocCachedWebClient.cpp  AocCachedWebClient.h  AocConfig.cpp  AocConfig.h  CachedAocDataLoader.cpp  CachedAocDataLoader.h  Context.h  InputReader.cpp  InputReader.h  Result.h  Solution.h  SolutionRunner.cpp  SolutionRunner.h  helpers.cpp  helpers.h
tests/: CMakeLists.txt
tests/solutions/: Day01Test.cpp  Day02Test.cpp  Day03Test.cpp  Day04Test.cpp  Day05Test.cpp  Day06Test.cpp  Day07Test.cpp  Day08Test.cpp  Day09Test.cpp  Day10Test.cpp  Day11Test.cpp  Day12Test.cpp  testhelper.cpp  testhelper.h
